--- a/public/map.html
+++ b/public/map.html
@@ -98,7 +98,7 @@
                             markers.push(m);
                             kakao.maps.event.addListener(m, 'click', () => {
                                 window.ReactNativeWebView.postMessage(
-                                    JSON.stringify({ type: 'MARKER_CLICK', index: i })
+                                    JSON.stringify({ type: 'MARKER_CLICK', name: p.name })
                                 );
                             });
                             const ov = new kakao.maps.CustomOverlay({
@@ -122,75 +122,59 @@
 
                 const key = '4d5054615477686d373350634c6477';
 
-                // 1) 메타 데이터 전체 로드
-                const metaResp = await fetch(
-                    `http://openapi.seoul.go.kr:8088/${key}/json/GetParkInfo/1/1000/`
-                );
+                const metaResp = await fetch(`http://openapi.seoul.go.kr:8088/${key}/json/GetParkInfo/1/1000/`);
                 const metaJson = await metaResp.json();
                 const meta = metaJson.GetParkInfo?.row || [];
 
-                // 2) 실시간 현황 전체 로드
-                const realResp = await fetch(
-                    `http://openapi.seoul.go.kr:8088/${key}/json/GetParkingInfo/1/1000/`
-                );
+                const realResp = await fetch(`http://openapi.seoul.go.kr:8088/${key}/json/GetParkingInfo/1/1000/`);
                 const realJson = await realResp.json();
                 const real = realJson.GetParkingInfo?.row || [];
 
-                // 3) 실시간 현황에서 사용 중 카운트만 추출
                 const realMap = {};
-                const usedOnceSet = new Set();
                 real.forEach(r => {
-                    if (!usedOnceSet.has(r.PKLT_CD)) {
-                        realMap[r.PKLT_CD] = Number(r.NOW_PRK_VHCL_CNT) || 0;
-                        usedOnceSet.add(r.PKLT_CD);
-                    }
+                    realMap[r.PKLT_CD] = Number(r.NOW_PRK_VHCL_CNT) || 0;
                 });
 
-
-                // 4) 같은 주차장 이름별로 TPKCT 합산, NOW_PRK_VHCL_CNT 활용하여 여유 주차대수 표시
                 const bounds = map.getBounds();
                 const sw = bounds.getSouthWest();
                 const ne = bounds.getNorthEast();
-
-                const paddingLat = 0.02;
-                const paddingLng = 0.02;
-
-                // 현재 보고 있는 지도 영역보다 넓게 탐색 (주차장 영역이 넓은 경우 마이너스로 표시되는 이슈 해결)
+                const paddingLat = 0.005;
+                const paddingLng = 0.005;
                 const extendedBounds = new kakao.maps.LatLngBounds(
                     new kakao.maps.LatLng(sw.getLat() - paddingLat, sw.getLng() - paddingLng),
                     new kakao.maps.LatLng(ne.getLat() + paddingLat, ne.getLng() + paddingLng)
-                )
-                const groupMap = {};
-                const usedSet = new Set();
+                );
+
+                // 이름 기준 그룹핑
+                const groups = {};
                 meta.forEach(item => {
-                    const code = item.PKLT_CD;
                     const name = item.PKLT_NM;
-                    const lat = parseFloat(item.LAT), lng = parseFloat(item.LOT);
-                    if (isNaN(lat) || isNaN(lng)) return;
-                    const pos = new kakao.maps.LatLng(lat, lng);
-                    if (!extendedBounds.contain(pos)) return;
-
-                    const total = Number(item.TPKCT) || 0;
-                    const used = (!usedSet.has(code) ? (realMap[code] || 0) : 0);
-                    usedSet.add(code);
-
-                    if (!groupMap[name]) {
-                        groupMap[name] = { total: 0, used: 0, lat, lng };
-                    }
-                    groupMap[name].total += total;
-                    groupMap[name].used += used;
+                    if (!groups[name]) groups[name] = [];
+                    groups[name].push(item);
                 });
 
-                // 5) 리스트로 변환
-                const list = Object.entries(groupMap).map(([name, { total, used, lat, lng }]) => ({
-                    name,
-                    lat,
-                    lng,
-                    info: { free: total - used, total }
-                }));
+                // 중복 사용 방지용 Set
+                const usedSet = new Set();
+
+                const list = Object.entries(groups).map(([name, items]) => {
+                    const total = items.reduce((sum, it) => sum + (Number(it.TPKCT) || 0), 0);
+
+                    const used = items.reduce((sum, it) => {
+                        const code = it.PKLT_CD;
+                        if (usedSet.has(code)) return sum;
+                        usedSet.add(code);
+                        return sum + (realMap[code] || 0);
+                    }, 0);
+
+                    const lat = parseFloat(items[0].LAT);
+                    const lng = parseFloat(items[0].LOT);
+                    return { name, lat, lng, info: { free: total - used, total } };
+                }).filter(p =>
+                    extendedBounds.contain(new kakao.maps.LatLng(p.lat, p.lng))
+                );
+
                 lastPlaces = list;
 
-                // 6) 지도에 표시
                 list.forEach((p, i) => {
                     const pos = new kakao.maps.LatLng(p.lat, p.lng);
                     const m = new kakao.maps.Marker({ position: pos, map, zIndex: 10 });
@@ -201,7 +185,6 @@
                         );
                     });
 
-                    // 간혹 api 오류로 인해 마이너스로 뜰 경우 잔여대수 0으로 표시
                     const free = Math.max(p.info.free, 0);
                     const content = p.info.total
                         ? `<div class="parking-label"><strong>${p.name}</strong>${free}/${p.info.total}</div>`
@@ -218,13 +201,20 @@
                     JSON.stringify({
                         type: 'PARKING_DATA',
                         data: list.reduce((acc, p) => {
-                            acc[p.name] = p.info;
+                            acc[p.name] = {
+                                free: p.info.free,
+                                total: p.info.total,
+                                lat: p.lat,
+                                lng: p.lng
+                            };
                             return acc;
                         }, {}),
                         places: list.map(p => p.name)
                     })
                 );
             };
+
+
 
             window.selectPlace = function (idx) {
                 const p = lastPlaces[idx];
@@ -248,12 +238,45 @@
                 map.setLevel(3);
             };
 
+            window.selectPlaceByName = function (name) {
+                const p = lastPlaces.find(pl => pl.name === name);
+                if (!p) return;
+                const pos = new kakao.maps.LatLng(p.lat, p.lng);
+                const m = new kakao.maps.Marker({ position: pos, map });
+                markers.push(m);
+
+                const content = p.info && p.info.total
+                    ? `<div class="parking-label"><strong>${p.name}</strong>${Math.max(p.info.free, 0)}/${p.info.total}</div>`
+                    : `<div class="marker-label">${p.name}</div>`;
+
+                const ov = new kakao.maps.CustomOverlay({
+                    map, position: pos, content,
+                    yAnchor: 1, offset: new kakao.maps.Size(0, 15)
+                });
+                overlays.push(ov);
+                map.setCenter(pos);
+                map.setLevel(3);
+            };
+
+            window.clearMarkers = function () {
+                markers.forEach(m => m.setMap(null));
+                overlays.forEach(o => o.setMap(null));
+                parkingMarkers.forEach(m => m.setMap(null));
+                parkingOverlays.forEach(o => o.setMap(null));
+
+                markers = [];
+                overlays = [];
+                parkingMarkers = [];
+                parkingOverlays = [];
+            };
+
             function handleMessage(e) {
                 let msg;
                 try { msg = JSON.parse(e.data) } catch { return }
                 if (msg.keyword) window.searchPlaces(msg.keyword);
                 else if (msg.type === 'PARKING') window.searchParking();
                 else if (msg.index !== undefined) window.selectPlace(msg.index);
+                else if (msg.type === 'CLEAR_MARKERS') window.clearMarkers();
             }
             window.addEventListener('message', handleMessage);
             document.addEventListener('message', handleMessage);
