에뮬레이터 위치 저장 방식 수정

--- a/public/map.html
+++ b/public/map.html
@@ -70,7 +70,7 @@
         kakao.maps.load(function () {
             const map = new kakao.maps.Map(
                 document.getElementById('map'),
-                { center: new kakao.maps.LatLng(37.55893664, 126.9987376), level: 3 }
+                { center: new kakao.maps.LatLng(37.570042, 126.999593), level: 3 }
             );
             const placesService = new kakao.maps.services.Places(map);
 
